fix: font-color, border-transparency, spacing

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   font-family: "Lato", sans-serif;
   line-height: 1;
   font-weight: 400;
+  color: #777;
 }
 
 .section-container {
@@ -314,28 +315,30 @@ body {
 }
 
 .menu-item {
-  padding: 1rem;
+  padding: 0.25rem 1rem 1rem;
 }
 
 .menu-item-title {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #cc9900;
+  border-bottom: 1px solid rgba(204, 153, 0, 0.5);
 
   font-size: 2.1rem;
-  line-height: 2.1;
+  line-height: 2.1rem;
   font-family: Yeseva One, cursive;
   color: #cc9900;
+  padding: 0.5rem 0 1rem;
 }
 
 .menu-item-text {
   font-size: 1.6rem;
   line-height: 1.6;
+  padding: 1rem 0 0;
 }
 
 .menu-item--special {
   position: relative;
-  border: 1px solid #cc9900;
+  border: 1px solid rgba(204, 153, 0, 0.5);
 }
 
 .menu-item--special::after {
